combio color a sass

--- a/SCSS/_download.scss
+++ b/SCSS/_download.scss
@@ -1,5 +1,5 @@
 .download {
-  background-color: #eae2b7;
+  background-color: $primary-color;
   .download_title {
     text-align: center;
     text-transform: uppercase;
