--- a/SCSS/_footer.scss
+++ b/SCSS/_footer.scss
@@ -1,11 +1,11 @@
 footer {
-  background-color: #676767;
-  color: white;
+  background-color: $footer-color;
+  color: $primary-color;
   padding: 1rem;
   height: 1fr;
   .footer_intro {
     text-transform: lowercase;
-    color: #eae2b7;
+    color: $primary-color;
     font-weight: bolder;
     font-size: 1rem;
     text-align: left;
@@ -26,7 +26,7 @@ footer {
     .footer_title {
       text-align: left;
       text-transform: capitalize;
-      color: #eae2b7;
+      color: $primary-color;
       font-weight: bold;
       font-size: 1rem;
       grid-area: footer_title;
@@ -65,13 +65,13 @@ footer {
 }
 @media (min-width: 768px) {
   footer {
-    background-color: #676767;
-    color: white;
+    background-color: $footer-color;
+    color: $primary-color;
     padding: 1rem;
     height: 1fr;
     .footer_intro {
       text-transform: lowercase;
-      color: #eae2b7;
+      color: $primary-color;
       font-weight: bolder;
       font-size: 1rem;
       text-align: left;
@@ -91,7 +91,7 @@ footer {
       .footer_title {
         text-align: left;
         text-transform: capitalize;
-        color: #eae2b7;
+        color: $primary-color;
         font-weight: bold;
         font-size: 1rem;
         grid-area: footer_title;
