--- a/SCSS/_contacto.scss
+++ b/SCSS/_contacto.scss
@@ -3,7 +3,7 @@
   grid-template-columns: auto auto auto auto;
   grid-template-rows: auto auto auto auto auto auto auto;
   grid-gap: 10px;
-  background-color: #d62828;
+  background-color: $header-color;
   padding: 10px;
   padding-bottom: 2rem;
   text-align: center;
@@ -15,7 +15,7 @@
     h3 {
       text-align: left;
       text-transform: capitalize;
-      color: white;
+      color: $primary-color;
       font-weight: bold;
       font-size: 1rem;
       width: 6rem;
@@ -28,7 +28,7 @@
     grid-area: 7 / 1 / span 6 / span 10;
     text-align: justify;
 
-    color: white;
+    color: $primary-color;
     font-weight: bold;
     font-size: 1rem;
     font-size: medium;
@@ -66,7 +66,7 @@
     grid-template-columns: auto auto auto auto auto;
     grid-template-rows: 20px auto auto auto;
     grid-gap: 10px;
-    background-color: #d62828;
+    background-color: $header-color;
     padding: 10px;
     text-align: center;
     padding: 5px 0;
@@ -83,7 +83,7 @@
           width: 100%;
           text-align: left;
           text-transform: capitalize;
-          color: white;
+          color: $primary-color;
           font-weight: bold;
           font-size: 1rem;
         }
@@ -96,7 +96,7 @@
           font-size: medium;
           text-align: left;
           padding-left: 5%;
-          color: white;
+          color: $primary-color;
           font-weight: bold;
           font-size: 1rem;
         }
