--- a/SCSS/_section.scss
+++ b/SCSS/_section.scss
@@ -1,12 +1,12 @@
 .intro_main {
-  background-color: #eae2b7;
+  background-color: $primary-color;
   .intro_section {
     padding: 1rem 0 0 0;
-    background-color: #eae2b7;
+    background-color: $primary-color;
     .container {
       .selection {
         text-transform: capitalize;
-        color: #003049;
+        color: $blue-color;
         font-size: 1.5rem;
         font-weight: 400;
         text-align: center;
@@ -14,11 +14,11 @@
           font-weight: 700;
         }
         h1 {
-          color: #003049;
+          color: $blue-color;
         }
         .text_2 {
           text-transform: capitalize;
-          color: #f77f00;
+          color: $orange-color;
           font-size: 1rem;
           font-weight: 400;
           margin-top: 1.5rem;
@@ -31,7 +31,7 @@
           max-width: 100%;
           padding: 2rem;
           box-shadow: 0px 10px 30px -10px rgba (0, 0, 0, 45);
-          background: #003049;
+          background: $blue-color;
           border-radius: 3px;
           .card__image {
             display: block;
@@ -64,7 +64,7 @@
 @media (min-width: 768px) {
   .intro_section {
     padding: 3rem 0 0 0;
-    background-color: #eae2b7;
+    background-color: $primary-color;
     .container {
       width: 80%;
       margin: 0 auto;
@@ -92,7 +92,7 @@
         max-width: 100%;
         padding: 2rem;
         box-shadow: 0px 10px 30px -10px rgba (0, 0, 0, 45);
-        background: #003049;
+        background: $blue-color;
         .card__image {
           display: block;
           width: 100%;
