arreglé tamaño video en la vista desk

--- a/SCSS/_form.scss
+++ b/SCSS/_form.scss
@@ -6,6 +6,9 @@
     .selection {
       .table_intro {
         border-color: $blue-color;
+        tr {
+          border-color: beige;
+        }
       }
     }
   }
