--- a/SCSS/_download.scss
+++ b/SCSS/_download.scss
@@ -40,12 +40,19 @@
         display: flex;
         flex-direction: row;
         align-items: flex-start;
-        width: 8rem;
-        height: 8rem;
+        width: 12rem;
+        height: auto;
         max-width: 100%;
         justify-content: center;
-        img {
+        a {
+          height: 8rem;
+          width: auto;
           padding: 1rem;
+          img {
+            height: 8rem;
+            width: auto;
+            padding: 1rem;
+          }
         }
       }
     }
