--- a/SCSS/_section.scss
+++ b/SCSS/_section.scss
@@ -42,19 +42,6 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            .Iframe__contenedor {
-              position: relative;
-              padding-bottom: 56.25%;
-              height: 0;
-              overflow: hidden;
-              iframe {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-              }
-            }
           }
         }
       }
@@ -90,6 +77,8 @@
       .card {
         margin: 0rem;
         max-width: 100%;
+        height: 8rem;
+        width: auto;
         padding: 2rem;
         box-shadow: 0px 10px 30px -10px rgba (0, 0, 0, 45);
         background: $blue-color;
